2021-11-10 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-09 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-09 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/tinyaes.c:
	  AES regression test.

2021-11-09 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/stdatomic.h,
	  device/lib/tlcs90/atomic_flag_test_and_set.s,
	  device/lib/atomic_flag_clear.c:
	  Improve atomic_flag using TLCS-90 test-and-set instruction.
	* sdas/astlcs90/t90.h,
	  sdas/astlcs90/t90mch.c,
	  sdas/astlcs90/t90pst.c:
	  Support tset.

2021-11-08 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  f8 bitfield fixes.

2021-11-06 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-05 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve codegen for experimental f8 port.

2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Improve use of ldw for 8-bit assignment.

2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Improve use of ldw for 8-bit assignment.

2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  src/f8/gen.c,
	  src/f8/main.c:
	  f8 fixes.

2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* support/makebin/makebin.c:
	  Fix buffer overflow, patch #400 by bbbbbr.

2021-11-04 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/f8/gen.c:
	  Support tstw.
	* support/regression/ports/f8,
	  support/regression/fwk/include/testfwk.h,
	  support/regression/Makefile.in: